mejoras en de interfaz en competitors, drivers, incidents y seasons

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Competitors/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Competitors/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CompetitorViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = $"{@Model.Name}";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
