--- a/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Index.cshtml
@@ -9,7 +9,7 @@
     bool canCreate = await SeasonViewModelService.CanCreateAnotherSeason();
 }
 
-<h1>Seasons - Index</h1>
+<h1>Seasons</h1>
 
 @{
     if (canCreate)
