--- a/src/TFG.RulesPenaltiesF1.Web/Views/Drivers/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Drivers/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Drivers - Index</h1>
+<h1>Drivers</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
