--- a/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Create.cshtml
@@ -19,7 +19,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Year" class="control-label"></label>
-                <input type="number" min="@year+1" max="@year+1" readonly asp-for="Year" class="form-control" value="@year"/>
+                <input type="number" min="@year" max="@year" readonly asp-for="Year" class="form-control" value="@year"/>
                 <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group mt-4">
