--- a/src/TFG.RulesPenaltiesF1.Web/Views/Incidents/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Incidents/Create.cshtml
@@ -78,12 +78,12 @@
             </div>
             <div class="form-group mt-4">
                 <label asp-for="Fine" class="control-label"></label>
-                <input asp-for="Fine" class="form-control" />
+                <input type="number" min="0" asp-for="Fine" class="form-control" />
                 <span asp-validation-for="Fine" class="text-danger"></span>
             </div>
             <div class="form-group mt-4">
                 <label asp-for="LicensePoints" class="control-label"></label>
-                <input asp-for="LicensePoints" class="form-control" />
+                <input type="number" min="0" max="6" step="1" asp-for="LicensePoints" class="form-control" />
                 <span asp-validation-for="LicensePoints" class="text-danger"></span>
             </div>
             <div class="form-group mt-4">
