--- a/src/TFG.RulesPenaltiesF1.Web/Views/Incidents/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Incidents/Details.cshtml
@@ -51,9 +51,36 @@
         <dt class="col-sm-2">
             Decision
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Penalty!.Name)
-        </dd>
+        @if(Model.Penalty is not null)
+        {
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Penalty!.Name)
+            </dd>
+            @if(Model.LicensePoints > 0)
+            {
+                <dt class="col-sm-2">
+                    License Points
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.LicensePoints!)
+                </dd>
+            }
+            @if(Model.Fine > 0)
+            {
+                <dt class="col-sm-2">
+                    Fine
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Fine!)€
+                </dd>
+            }
+        }
+        else
+        {
+            <dd class="col-sm-10">
+                No Further Action
+            </dd>
+        }
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Reason)
         </dt>
